# fast_zero

./: Dockerfile  README.md  compose.yaml  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  models.py  security.py  settings.py
fast_zero/routers/: auth.py  todo.py  users.py
migrations/: env.py
migrations/versions/: 36f81fd49e39_update_table_todo_add_created_at_and_.py  429c9502b8ba_create_users_table.py  810c212e0fde_alter_users_table_new_column_updated_at.py  c5ad829ce49a_create_todos_table.py  cd6c709c6b82_add_column_in_users_updated_at.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
